# nonecap-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nonecap/: __init__.py  _client.py  _errors.py  _types.py
tests/: conftest.py  test_async_client.py  test_client.py  typing_assertions.py
